build/k8s/insprd-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: insprd-svc
spec:
  selector:
    app: insprd
  type: ClusterIP
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
