build/k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: inspr-ingress
  annotations:
    kubernetes.io/ingress.class: "nginx"
spec:
  rules:
  - host: "inspr.com"
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: insprd-svc
            port:
              number: 80
